# LLM-Powered-OS-Interaction

./: Makefile  README.md  agent_cli.py  pyproject.toml
core/: executor.py  planner.py  tools.py
models/: __init__.py  action.py  plan.py
patterns/: welcome_prompt.md
service/: llm_client.py
