[project]
name = "terminal-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "SWAPNIL",email = "swa2314@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich (>=14.2.0,<15.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pdfplumber (>=0.11.0,<1.0.0)",
    "black (>=25.12.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
